@@ -22,6 +22,17 @@ java {
     }
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+tasks.withType<Test> {
+    jvmArgs("--enable-preview")
+}
+tasks.withType<Test> {
+    jvmArgs("--enable-preview")
+}
+
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
